# game-of-life

./: .gitmodules  CMakeLists.txt  golife.py
src/: CMakeLists.txt  golife.cxx  golife.h  main.cxx  ui.cxx
